--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div id="order-summary-card">
+    <div id="card-header">
+      <img src="./images/illustration-hero.svg">
+    </div>
+    <div id="order-summary">
+      <h1>Order Summary</h1>
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+      <div id="plan-info">
+        <p id="plan-name">Annual Plan</p>
+        <p id="plan-price">$59.99/year</p>
+        <p><a href="#">Change</a></p>
+      </div>
+      <div id="options">
+        <p><a href="#">Proceed to Payment</a></p>
+        <p><a href="#">Cancel Order</a></p>
+      </div>
+    </div>
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+      <p>Coded by <a href="#">Russell</a>.</p>
+    </div>
   </div>
 </body>
 </html>
