organised plan info slice into divs in index.html

--- a/index.html
+++ b/index.html
@@ -10,26 +10,37 @@
 </head>
 <body>
   <div id="order-summary-card">
+
     <div id="card-header">
       <img src="./images/illustration-hero.svg">
     </div>
+
     <div id="order-summary">
       <h1>Order Summary</h1>
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-      <div id="plan-info">
-        <p id="plan-name">Annual Plan</p>
-        <p id="plan-price">$59.99/year</p>
-        <p><a href="#">Change</a></p>
+      <div id="plan-slice">
+        <div id="plan-icon">
+          <img src="./images/icon-music.svg">
+        </div>
+        <div id="plan-info">
+          <p id="plan-info-name">Annual Plan</p>
+          <p id="plan-info-price">$59.99/year</p>
+        </div>
+        <div id="plan-change">
+          <p><a href="#">Change</a></p>
+        </div>
       </div>
       <div id="options">
         <p><a href="#">Proceed to Payment</a></p>
         <p><a href="#">Cancel Order</a></p>
       </div>
     </div>
+
     <div class="attribution">
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
       <p>Coded by <a href="#">Russell</a>.</p>
     </div>
+    
   </div>
 </body>
 </html>
