added colours and adjusted the width of the plan info slice

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         </div>
       </div>
       <div id="options">
-        <p><a href="#">Proceed to Payment</a></p>
-        <p><a href="#">Cancel Order</a></p>
+        <p id="payment-button"><a href="#">Proceed to Payment</a></p>
+        <p id="cancel-button"><a href="#">Cancel Order</a></p>
       </div>
     </div>
 
     <div class="attribution">
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-      <p>Coded by <a href="#">Russell</a>.</p>
+      <p>Coded by <a href="https://github.com/russellmclean117">Russell</a>.</p>
     </div>
 
   </div>
