updated the alignment of the text in the payment buttons

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
       </div>
       <div id="options">
-        <p id="payment-button"><a href="#">Proceed to Payment</a></p>
-        <p id="cancel-button"><a href="#">Cancel Order</a></p>
+        <a href="#"><div id="payment-button">Proceed to Payment</div></a>
+        <div id="cancel-button"><a href="#">Cancel Order</a></div>
       </div>
     </div>
 
