rounded the corners on the card

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </div>
 
     <div class="attribution">
-      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-      <p>Coded by <a href="https://github.com/russellmclean117">Russell</a>.</p>
+      <div id="challenge-by">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</div>
+      <div id="coded-by">Coded by <a href="https://github.com/russellmclean117">Russell</a>.</div>
     </div>
 
   </div>
