adjusted the alignment of elements in the plan info slice

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           <img src="./images/icon-music.svg">
         </div>
         <div id="plan-info" class="plan-slice-col">
-          <p id="plan-info-name">Annual Plan</p>
-          <p id="plan-info-price">$59.99/year</p>
+          <div id="plan-info-name">Annual Plan</div>
+          <div id="plan-info-price">$59.99/year</div>
         </div>
         <div id="plan-change" class="plan-slice-col">
-          <p><a href="#">Change</a></p>
+          <a href="#">Change</a>
         </div>
       </div>
-      <div id="options">
+      <div id="payment-options">
         <a href="#"><div id="payment-button">Proceed to Payment</div></a>
         <div id="cancel-button"><a href="#">Cancel Order</a></div>
       </div>
