--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
     <div id="order-summary">
       <h1>Order Summary</h1>
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+      <p class="grey-text">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
       <div id="plan-slice-container">
         <div id="plan-icon" class="plan-slice-col">
           <img src="./images/icon-music.svg">
         </div>
         <div id="plan-info" class="plan-slice-col">
           <div id="plan-info-name">Annual Plan</div>
-          <div id="plan-info-price">$59.99/year</div>
+          <div id="plan-info-price" class="grey-text">$59.99/year</div>
         </div>
         <div id="plan-change" class="plan-slice-col">
           <a href="#">Change</a>
@@ -38,7 +38,7 @@
       </div>
       <div id="payment-options">
         <a href="#"><div id="payment-button">Proceed to Payment</div></a>
-        <div id="cancel-button"><a href="#">Cancel Order</a></div>
+        <div id="cancel-button"><a href="#" class="grey-text">Cancel Order</a></div>
       </div>
     </div>
 
