fix: update readme

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div id="footer-container" class="attribution">
-    Challenge by <a id="challenge-by" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a id="coded-by" href="https://github.com/russellmclean117">Russell</a>.
+    Challenge by <a id="challenge-by" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a id="coded-by" href="https://github.com/russmc">Russell</a>.
   </div>
 
 </body>
